# shoyu

./: .clang-format  .gitignore  README.md  flake.nix  meson.build  meson.options
.github/workflows/: clang-format.yml
build-aux/meson/: gen-visibility-macros.py
docs/reference/: meson.build
docs/reference/compositor/: meson.build  shoyu-compositor.toml.in
docs/reference/shell-gtk3/: meson.build  shoyu-shell-gtk3.toml.in
docs/reference/shell-gtk4/: meson.build  shoyu-shell-gtk4.toml.in
example/: gtk3.vala  simple.c
examples/: meson.build
examples/shell-gtk3/: meson.build
examples/shell-gtk3/basic-vala/: main.vala  meson.build
examples/shell-gtk3/hello-world/: main.c  meson.build
examples/shell-gtk4/basic-vala/: main.vala  meson.build
examples/shell-gtk4/hello-world/: main.c  meson.build
include/shoyu/: application.h  compositor.h  output.h  shoyu.h  wayland-event-source.h
po/: POTFILES  en.po  meson.build  shoyu.pot
protocols/: meson.build  shoyu-shell.xml
shoyu-compositor/: compositor-private.h  compositor.c  compositor.h  config.h.meson  input-private.h  input.c  input.h  keyboard-input-private.h  keyboard-input.c  keyboard-input.h  main.c  main.h  meson.build  output-private.h  output.c  output.h  pointer-input-private.h  pointer-input.c  pointer-input.h  shell-output-private.h  shell-output.c  shell-private.h  shell-surface-private.h  shell-surface.c  shell-toplevel-private.h  shell-toplevel.c  shell.c  shell.h  shoyu-compositor.h  surface-private.h  surface.c  surface.h  version.c  version.h.in  wayland-event-source-private.h  wayland-event-source.c  wayland-event-source.h  xdg-shell-protocol.h  xdg-toplevel-private.h  xdg-toplevel.c  (+1 more)
shoyu-compositor-runner/: application.c  application.h  main.c  meson.build
shoyu-compositor/version/: meson.build  versionmacros.h.in
shoyu-shell-gtk3/: config.h.meson  display-private.h  display.c  display.h  dmabuf-private.h  main-private.h  main.c  main.h  meson.build  shoyu-shell-gtk3.h  toplevel-private.h  toplevel.c  toplevel.h  version.c  version.h.in
shoyu-shell-gtk3/version/: meson.build  versionmacros.h.in
shoyu-shell-gtk4/: config.h.meson  display-private.h  display.c  display.h  dmabuf-private.h  dmabuf.c  main-private.h  main.c  main.h  meson.build  shoyu-shell-gtk4.h  toplevel-private.h  toplevel.c  toplevel.h  version.c  version.h.in
shoyu-shell-gtk4/version/: meson.build  versionmacros.h.in
src/: application-private.h  application.c  compositor-private.h  compositor.c  output-private.h  output.c  wayland-event-source-private.h  wayland-event-source.c
vapi/: libdrm.vapi  wayland-server.vapi  wlroots-0.18.vapi
